# MLP

./: .gitignore  CMakeLists.txt  README.md
include/activations/: activation.hpp
include/core/: cuda_utils.cuh  profiling.hpp  tensor.hpp
include/data/: mnist_loader.hpp
include/inference/: inference_export.hpp
include/layers/: activation_layer.hpp  layer.hpp  linear_layer.hpp
include/loss/: softmax_cross_entropy.hpp
include/network/: network.hpp  network_builder.hpp
include/training/: trainer.hpp
scripts/: download_mnist.sh  visualize_inference.py  visualize_inference_colab.py
src/: main.cpp
src/core/: profiling.cpp
src/cuda/: activation_layer.cu  linear_layer.cu  softmax_cross_entropy.cu
src/data/: mnist_loader.cpp
src/inference/: inference_export.cpp
src/network/: network.cpp
src/training/: trainer.cpp
